# Metadata-Interchange-Format

./: .gitignore  CLAUDE.md  README.md  batch.py  bootstrap.py  canonical.py  dwc-columns.ale  example-clip.omc.json  example-reel.omc.json  keyring.json  mhl_walker.py  pyproject.toml  sign-example.py  test_c4_interop.py  test_cdl_roundtrip.py  validate.py  watch.py
.github/workflows/: homebrew-tap-bump.yml  hosted-schema-drift.yml  macos-statusbar.yml  release-cli.yml  web-validator.yml
Camera/A001/: A001_C042_0420AB.ari
amf/: A001_C042_0420AB.amf  A001_C043_0420CD.amf
delivery/: A001.mhl  A001_v1.mhl
docs/: quickstart.md
docs/integration/: avid.md  resolve.md  shotput.md  silverstack.md  yoyotta-vendor-request.md
docs/operations/: doctor.md  signer-backends.md  watch.md
fdl/: S042.fdl
help/: dwc-sidecar-manual.md
macos-statusbar/: Package.swift  README.md  RELEASE.md
macos-statusbar/Resources/: AppIcon.icns
plans/: phase-02.md
proxy/: A001_C042_0420AB.mov
resolve/: day01.ale
schemas/: events.schema.json
sidecars/: A234C001_260115P9.omc.json  A234C002_260115D7.omc.json  A234C003_260115XZ.omc.json  A234C004_2601156F.omc.json  A234C005_260115J4.omc.json  A234C006_260115FU.omc.json  A235C001_260115XX.omc.json  A235C002_260115J1.omc.json  A235C003_260115VJ.omc.json  A235C004_2601155L.omc.json  A235C005_26011534.omc.json  A235C006_260115TA.omc.json  B211C001_260115MM.omc.json  B211C002_260115I0.omc.json  B211C003_260115MI.omc.json  B211C004_260115PH.omc.json  B211C005_260115WM.omc.json  B211C006_260115VO.omc.json  B211C007_2601154T.omc.json  B211C008_260115L8.omc.json  B211C009_260115DJ.omc.json  B211C010_260115O9.omc.json  B211C011_2601158H.omc.json  B211C012_260115IA.omc.json  B211C013_2601152C.omc.json  B211C014_260115RF.omc.json  B211C015_260115ZF.omc.json  B211C016_260115NP.omc.json  B211C017_260115T1.omc.json  B211C018_260115GY.omc.json  B211C019_260115WN.omc.json  B211C020_260115WM.omc.json  B211C021_260115IW.omc.json  B211C022_260115NX.omc.json  B211C023_2601156H.omc.json  C096C001_260115DP.omc.json  C096C002_2601151P.omc.json  C096C003_260115H9.omc.json  C096C004_260115YT.omc.json  C096C005_26011582.omc.json
sidecars-mhl/: A234C001_260115P9.omc.json  A234C002_260115D7.omc.json  A234C003_260115XZ.omc.json  A234C004_2601156F.omc.json  A234C005_260115J4.omc.json  A234C006_260115FU.omc.json  A235C001_260115XX.omc.json  A235C002_260115J1.omc.json  A235C003_260115VJ.omc.json  A235C004_2601155L.omc.json  A235C005_26011534.omc.json  A235C006_260115TA.omc.json  B211C001_260115MM.omc.json  B211C002_260115I0.omc.json  B211C003_260115MI.omc.json  B211C004_260115PH.omc.json  B211C005_260115WM.omc.json  B211C006_260115VO.omc.json  B211C007_2601154T.omc.json  B211C008_260115L8.omc.json  B211C009_260115DJ.omc.json  B211C010_260115O9.omc.json  B211C011_2601158H.omc.json  B211C012_260115IA.omc.json  B211C013_2601152C.omc.json  B211C014_260115RF.omc.json  B211C015_260115ZF.omc.json  B211C016_260115NP.omc.json  B211C017_260115T1.omc.json  B211C018_260115GY.omc.json  B211C019_260115WN.omc.json  B211C020_260115WM.omc.json  B211C021_260115IW.omc.json  B211C022_260115NX.omc.json  B211C023_2601156H.omc.json  C096C001_260115DP.omc.json  C096C002_2601151P.omc.json  C096C003_260115H9.omc.json  C096C004_260115YT.omc.json  C096C005_26011582.omc.json
tests/: conftest.py  test_ale_emitter.py  test_c4_interop.py  test_cdl_roundtrip.py  test_doctor.py  test_init.py  test_release_artifacts.py  test_resolve_script.py  test_signers_azure_mhsm.py  test_signers_gcp_kms.py  test_signers_jsonfile.py  test_signers_keychain.py  test_signers_pkcs11.py  test_signers_vault.py  test_silverstack_script.py  test_validate_as_json.py  test_web_remap.py  test_web_validator_build.py
(+74 files in other folders)
